css - mac os webkit clipping fix

--- a/src/App.css
+++ b/src/App.css
@@ -90,12 +90,11 @@ button:hover{
 
 .overlay {
   position: fixed;
-  width: 100%;
-  height: 100%;
+  width: 0;
+  height: 0;
   background: black;
-  z-index: -1;
   opacity: 0;
-  transition: opacity 1s ease;
+  transition: opacity 0.5s ease;
 }
 
 .overlay-modal {
@@ -103,7 +102,8 @@ button:hover{
   width: 100%;
   height: 100%;
   background: black;
-  z-index: 1;
+  transform: translateZ(2px);
+  z-index: 2;
   opacity: 0.5;
   transition: opacity 1s ease;
 }
@@ -140,6 +140,7 @@ button:hover{
 .pokemon-card-front, .pokemon-card-back {
   position: absolute;
   backface-visibility: hidden;
+  transform: translateZ(1px);
   width: 100%;
   height: 100%;
   display: flex;
@@ -153,14 +154,14 @@ button:hover{
 
 .pokemon-card-back {
     /*background: rgba(255,255,255,0.5);*/
-    transform: rotateY(180deg);
+    transform: rotateY(180deg) translateZ(2px);
     padding: 10px;
-    gap: 10px;
 }
 
 .pokemon-general-info {
   text-align: center;
   border-collapse: collapse;
+  margin: 10px 0;
 }
 
 .pokemon-general-info td {
@@ -237,7 +238,7 @@ td.loaded {
 
 .card-open .pokemon-card{
   position: fixed;
-  transform: rotateY(180deg) translate(50%, -50%);
+  transform: rotateY(180deg) translate3d(125px, -250px, -100px);
   transition-duration: 1s !important;
   transition-property: all !important;
   transform-origin: center bottom;
